<resources>
    <string name="app_name">Space Trader</string>
    <string name="new_game_header">New Game</string>
    <string name="name_option">Name</string>
    <string name="name_textbox_placeholder">Your Name</string>
    <string name="skill_points_option">Skill Points (%d remaining)</string>
    <string name="pilot_skill">Pilot</string>
    <string name="fighter_skill">Fighter</string>
    <string name="trader_skill">Trader</string>
    <string name="engineer_skill">Engineer</string>
    <string name="difficulty_option">Difficulty</string>
    <string name="create_game">Create Game</string>
    <string-array name="difficulty">
        <item>Beginner</item>
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
        <item>Impossible</item>
    </string-array>
    <string name="skillpoints_notify">You haven\'t used all your skillpoints yet!</string>
    <string name="empty_name_notify">You need to enter a name!</string>

    <!-- Tabs -->
    <string name="title_planet_info">Info</string>
    <string name="title_universe">Map</string>

    <!-- Info Container -->
    <string name="info_system_tab">System</string>
    <string name="info_player_tab">Player</string>
    <string name="info_system_info">System Info</string>
    <string name="info_player_info">Player Info</string>

    <!-- System Info -->
    <string name="si_location_header">Location:</string>
    <string name="si_tech_level_header">Tech Level:</string>
    <string name="si_resources_header">Resources:</string>
    <string name="si_increaseevents_header">Special Event:</string>

    <!-- Player Info -->
    <string name="pi_shiptype">Ship Type: %s</string>
    <string name="pi_cash">Credits: $%d</string>
    <string name="pi_fuel">You currently have enough fuel to fly %d parsecs</string>
    <string name="pi_max_fuel">(%d max)</string>
    <string name="pi_buy1">Buy 1</string>
    <string name="pi_buyall">Buy All</string>

    <!-- Map -->
    <string name="map_system_type">System</string>
    <string name="map_universe_type">Universe</string>

    <!-- Shop -->
    <string name="shop_item_status">$%d, %d</string>
    <string name="shop_quantity_buy_suffix">available</string>
    <string name="shop_quantity_sell_suffix">in cargo hold</string>
    <string name="shop_remaining_cargo">Remaining cargo space: %d/%d</string>
    <string name="shop_cash">Credits: $%d</string>

    <!-- Quick System Info -->
    <string name="qsi_warp_button">Warp</string>
    <string name="qsi_location">Location: %d, %d</string>
    <string name="qsi_tech">Tech Level: %s</string>
    <string name="qsi_resources">Resources: %s</string>
    <string name="qsi_no_fuel">Not enough fuel!</string>
</resources>
